<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/black_shade_1"
    app:cardElevation="4dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_shade_2"
    android:layout_margin="4dp">

    <TextView
        android:id="@+id/TVNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:layout_toStartOf="@id/IVDelete"
        android:text="@string/notetitle"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TVTimeStamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVNoteTitle"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toStartOf="@id/IVDelete"
        android:padding="4dp"
        android:text="@string/updated_at"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/IVDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_delete"
        app:tint="@color/white"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:padding="4dp"
        android:contentDescription="@string/delete_note" />


</RelativeLayout>


</androidx.cardview.widget.CardView>