<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".AddEditNoteActivity">


    <EditText
        android:id="@+id/EdtNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_note_title"
        android:inputType="text"
        android:background="@color/black_shade_2"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EdtNoteDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/enter_note_description"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:background="@color/black_shade_2"
        android:layout_above="@id/BtnAddUpdate"
        android:layout_below="@id/EdtNoteTitle"
        android:autofillHints="" />

    <Button
        android:id="@+id/BtnAddUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:text="@string/button"
        android:background="@drawable/custom_button_back"
        app:backgroundTint="@color/black_shade_2"
        android:layout_above="@id/BtnAddUpdate"
        android:textAllCaps="false"
        android:textColor="@color/white"

        />
</RelativeLayout>